public/scss/app.scss
@import "settings";
@import "foundation";

$pc-header-height-small: 240px;
$pc-header-height-medium: 320px;
$pc-header-height-large: 360px;

#pc-header {
  background-color: black;
  background-image: image-url("background.jpg");
  background-position: center bottom;
  background-size: cover;
  height: $pc-header-height-small;
  @media #{$medium-up} {
    height: $pc-header-height-medium;
  }
  @media #{$large-up} {
    height: $pc-header-height-large;
  }
  text-align: center;

  // Vertical centering using http://css-tricks.com/centering-in-the-unknown/
  .row {
    display: inline-block;
    vertical-align: middle;
  }
}

// Vertical centering using http://css-tricks.com/centering-in-the-unknown/
#pc-header:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  margin-right: -0.25em;
}

#pc-logo {
  width: 90%;
  max-height: $pc-header-height-small - 84px;
  @media #{$medium-up} {
    max-height: inherit;
  }
}

.header-links {
  @include block-grid($per-row: 3, $spacing: 0px);
  a {
    font-family: $header-font-family;
    font-weight: $header-font-weight;
    font-size: 16pt;
    @media #{$medium-up} {
      font-size: 22pt;
    }
    color: $body-font-color;
  }
}

